# ladle

./: .gitignore  .travis.yml  Makefile.am  README.md  autogen.sh  configure.ac
include/: chef.h
include/ladle/: chef.h  groups.h  ladle.h  log.h  memory.h  opts.h  users.h  utils.h
src/: Makefile.am  chef.c  groups.c  ladle  log.c  main.c  memory.c  opts.c  users.c  utils.c
src/test/recipes/: default.rb
